test-stand-infra/host-lib/tests/snapshots/smoke_mock__send_to_target_usart_sync - parsed.snap
---
source: tests/smoke-mock.rs
expression: "&deser_msg"

---
SendUsart {
    mode: Sync,
    data: [
        254,
        237,
        218,
        122,
    ],
}
