test-stand-infra/host-lib/tests/snapshots/smoke_mock__set_pin_5_high - parsed.snap
---
source: tests/smoke-mock.rs
expression: "&deser_msg"

---
SetPin(
    SetLevel {
        pin: Pin5,
        level: High,
    },
)
