test-stand-infra/host-lib/tests/snapshots/smoke_mock__set_pin_5_high.snap
---
source: tests/smoke-mock.rs
expression: test_hdl.pop_host_lib_data().unwrap()

---
[
    2,
    1,
    1,
    1,
    0,
]
