test-stand-infra/host-lib/tests/snapshots/smoke_mock__wait_for_rts - parsed.snap
---
source: tests/smoke-mock.rs
expression: "&deser_msg"

---
ReadPin(
    ReadLevel {
        pin: Rts,
    },
)
